# justcommit

./: CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  config.ts  credential.ts  deno.jsonc  deps.ts  generator.ts  git.ts  main.ts  main_test.ts  openai.ts  utils.ts
.github/workflows/: check.yml  release-please.yml  release.yml
src/: args.rs  config.rs  env.rs  git.rs  main.rs  openai.rs
src/commit/: mod.rs  openai.rs
src/config/: file.rs  mod.rs
