[package]
name = "justcommit"
description = "AI powered commit message generator."
version = "0.3.8"
authors = ["Shuntaro Nishizawa"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive"] }
config = { version = "0.14.0", default-features = false, features = ["toml"] }
dirs = "5.0.1"
git2 = { version = "0.18.3", default-features = false }
glob = "0.3.1"
indoc = "2.0.4"
once_cell = "1.19.0"
reqwest = { version = "0.12.0", default-features = false, features = [
  "json",
  "rustls-tls",
] }
schemars = "0.8.16"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
