[package]
name = "justcommit"
description = "AI powered commit message generator."
version = "0.3.9"
authors = ["Shuntaro Nishizawa"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
config = { version = "0.14.0", default-features = false, features = ["toml"] }
dirs = "5.0.1"
git2 = { version = "0.19.0", default-features = false }
glob = "0.3.1"
indoc = "2.0.5"
once_cell = "1.19.0"
reqwest = { version = "0.12.5", default-features = false, features = [
  "json",
  "rustls-tls",
] }
schemars = "0.8.21"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
